# libsimpleplist-qt4

./: CMakeLists.txt  README  simplepropertylistreader.cpp  simplepropertylistreader.h
